--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,51 +1,51 @@
 <section class="d-flex justify-content-center">
-  <div class="mt-5 section-home d-flex justify-content-evenly flex-wrap">
+  <div class="mt-5 section-home row">
 
-    <div class="card card-home-redirect">
-      <div class="card-body d-flex justify-content-center">
-        <h5 class="card-title mb-0">Guías y documentos</h5>
+    <div class="col-3 mb-4">
+      <div class="card card-home-redirect" [routerLink]='["/mi-poliza"]'>
+        <div class="card-body d-flex justify-content-center">
+          <h5 class="card-title mb-0">Mi póliza</h5>
+        </div>
+      </div>
+    </div>
+    
+    <div class="col-3 mb-4">
+      <div class="card card-home-redirect">
+        <div class="card-body d-flex justify-content-center">
+          <h5 class="card-title mb-0">Cursos</h5>
+        </div>
       </div>
     </div>
 
-    <div class="card card-home-redirect">
-      <div class="card-body d-flex justify-content-center">
-        <h5 class="card-title mb-0">Noticias</h5>
+    <div class="col-3 mb-4">
+      <div class="card card-home-redirect">
+        <div class="card-body d-flex justify-content-center">
+          <h5 class="card-title mb-0">Convenios</h5>
+        </div>
       </div>
     </div>
 
-    <div class="card card-home-redirect">
-      <div class="card-body d-flex justify-content-center">
-        <h5 class="card-title mb-0">Asistencia</h5>
+    <div class="col-3 mb-4">
+      <div class="card card-home-redirect">
+        <div class="card-body d-flex justify-content-center">
+          <h5 class="card-title mb-0">Descuentos</h5>
+        </div>
       </div>
     </div>
 
-    <div class="card card-home-redirect">
-      <div class="card-body d-flex justify-content-center">
-        <h5 class="card-title mb-0">Descuentos</h5>
+    <div class="col-3 mb-4">
+      <div class="card card-home-redirect">
+        <div class="card-body d-flex justify-content-center">
+          <h5 class="card-title mb-0">FAQ's</h5>
+        </div>
       </div>
     </div>
 
-    <div class="card card-home-redirect">
-      <div class="card-body d-flex justify-content-center">
-        <h5 class="card-title mb-0" [routerLink]='["/policies/list"]'>Mis pólizas</h5>
-      </div>
-    </div>
-
-    <div class="card card-home-redirect">
-      <div class="card-body d-flex justify-content-center">
-        <h5 class="card-title mb-0" [routerLink]='["/contacts/list"]'>Mis contactos</h5>
-      </div>
-    </div>
-
-    <div class="card card-home-redirect">
-      <div class="card-body d-flex justify-content-center">
-        <h5 class="card-title mb-0">Mis pagos</h5>
-      </div>
-    </div>
-
-    <div class="card card-home-redirect">
-      <div class="card-body d-flex justify-content-center">
-        <h5 class="card-title mb-0">Acerca de</h5>
+    <div class="col-3 mb-4">
+      <div class="card card-home-redirect">
+        <div class="card-body d-flex justify-content-center">
+          <h5 class="card-title mb-0">Configurar</h5>
+        </div>
       </div>
     </div>
 
