--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,39 @@
 #main-container {
+    max-width: 1400px;
+    margin: 0 auto;
     min-height: 85vh;
 }
 .cursor-pointer {
     cursor: pointer;
+}
+.container-avatar-default-navbar {
+    background-color: white;
+    border-radius: 100%;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    img {
+        width: 40px;
+        height: 40px;
+    }
+}
+.navbar-bradcrumb {
+    background-color: #dddd;
+    color: gray;
+    font-weight: bold;
+    height: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 20px;
+
+    .close-icon-return {
+        font-size: 40px;
+        line-height: 20px;
+        font-weight: 400;
+        cursor: pointer;
+    }
 }
