--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
-<section class="d-flex justify-content-center">
-  <div class="mt-5 section-home row">
+<section class="">
+  <div class="mt-5 section-home row m-0">
 
-    <div class="col-3 mb-4">
+    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
       <div class="card card-home-redirect" [routerLink]='["/mi-poliza"]'>
         <div class="card-body d-flex justify-content-center">
           <h5 class="card-title mb-0">Mi póliza</h5>
@@ -9,15 +9,15 @@
       </div>
     </div>
     
-    <div class="col-3 mb-4">
-      <div class="card card-home-redirect">
+    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+      <div class="card card-home-redirect" [routerLink]="['/cursos']">
         <div class="card-body d-flex justify-content-center">
           <h5 class="card-title mb-0">Cursos</h5>
         </div>
       </div>
     </div>
 
-    <div class="col-3 mb-4">
+    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
       <div class="card card-home-redirect">
         <div class="card-body d-flex justify-content-center">
           <h5 class="card-title mb-0">Convenios</h5>
@@ -25,7 +25,7 @@
       </div>
     </div>
 
-    <div class="col-3 mb-4">
+    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
       <div class="card card-home-redirect">
         <div class="card-body d-flex justify-content-center">
           <h5 class="card-title mb-0">Descuentos</h5>
@@ -33,7 +33,7 @@
       </div>
     </div>
 
-    <div class="col-3 mb-4">
+    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
       <div class="card card-home-redirect">
         <div class="card-body d-flex justify-content-center">
           <h5 class="card-title mb-0">FAQ's</h5>
@@ -41,7 +41,7 @@
       </div>
     </div>
 
-    <div class="col-3 mb-4">
+    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
       <div class="card card-home-redirect">
         <div class="card-body d-flex justify-content-center">
           <h5 class="card-title mb-0">Configurar</h5>
