--- a/src/app/pages/policie/policie.component.html
+++ b/src/app/pages/policie/policie.component.html
@@ -1,18 +1,23 @@
 <section class="policie-detail">
-  <div class="w-100 d-flex justify-content-between align-items-center mb-4">
-    <h3>Póliza AA-012345678-0010</h3>
-    <div class="d-flex align-items-center">Activa
-      <span class="dot-green ms-2"></span>
+  <div class="row w-100 m-0">
+
+    <div class="w-100 d-flex justify-content-between align-items-center mb-4">
+      <h3>Póliza AA-012345678-0010</h3>
+      <div class="d-flex align-items-center">Activa
+        <span class="dot-green ms-2"></span>
+      </div>
     </div>
   </div>
 
-  <div class="w-100 d-flex justify-content-between align-items-center mb-4">
-    <span class="me-3 d-block">Beneficiario</span>
-    <input type="text" class="form-control" placeholder="Beneficiario">
+  <div class="row w-100 m-0">
+    <div class="w-100 mb-4 col-12">
+      <span class="me-3 d-block mb-2">Beneficiario</span>
+      <input type="text" class="form-control" placeholder="Beneficiario">
+    </div>
   </div>
 
-  <div class="w-100 row mb-4">
-    <div class="col-6">
+  <div class="w-100 row mb-4 m-0">
+    <div class="col-12 col-md-6 mb-4">
       <span class="me-3 d-block mb-2">Fecha de inicio</span>
       <input type="text"
         placeholder="Datepicker"
@@ -20,7 +25,7 @@
         bsDatepicker>
     </div>
 
-    <div class="col-6">
+    <div class="col-12 col-md-6 mb-4">
       <span class="me-3 d-block mb-2">Fecha de vencimiento</span>
       <input type="text"
         placeholder="Datepicker"
@@ -28,15 +33,15 @@
         bsDatepicker>
     </div>
   </div>
-  <h4 class="mb-4">Documentos Asociados</h4>
+  <h4 class="mb-4 px-2">Documentos Asociados</h4>
 
-  <div class="w-100 row mb-4">
-    <div class="col-6">
+  <div class="w-100 row mb-4 m-0">
+    <div class="col-12 col-md-6">
       <span class="me-3 d-block mb-2">Formato firmado</span>
       <input class="form-control" type="file" id="formFileMultiple" multiple>
     </div>
 
-    <div class="col-6">
+    <div class="col-12 col-md-6">
       <span class="me-3 d-block mb-2">Identificación</span>
       <input class="form-control" type="file" id="formFileMultiple" multiple>
     </div>
