--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,48 @@
     <span class="navbar-brand mb-0 h1 cursor-pointer" [routerLink]='["/"]'><h1>Saluda+</h1></span>
     <div class="d-flex align-items-center">
       <h3 class="text-white">Hola, Usuario!</h3>
-      <span class="container-avatar-default-navbar ms-4">
+      <span class="container-avatar-default-navbar ms-4 dropend" type="button" id="dropdown-navbar" data-bs-toggle="dropdown" aria-expanded="false">
         <img src="../assets/img/avatar-default.svg" />
       </span>
+      <div class="dropdown">
+        <ul class="dropdown-menu" aria-labelledby="dropdown-navbar">
+          <li><a class="dropdown-item" href="#modal-login" data-bs-toggle="modal" >Iniciar sesión</a></li>
+          <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
+        </ul>
+      </div>
     </div>
   </nav>
+  <div class="modal fade" id="modal-login" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-body">
+          <form class="px-4 py-3">
+            <div class="mb-3">
+              <label for="exampleDropdownFormEmail1" class="form-label">Email address</label>
+              <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
+            </div>
+            <div class="mb-3">
+              <label for="exampleDropdownFormPassword1" class="form-label">Password</label>
+              <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Password">
+            </div>
+            <div class="mb-3">
+              <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="dropdownCheck">
+                <label class="form-check-label" for="dropdownCheck">
+                  Remember me
+                </label>
+              </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Sign in</button>
+          </form>
+          <div class="px-4 py-2">
+            <a class="dropdown-item" href="#">New around here? Sign up</a>
+            <a class="dropdown-item" href="#">Forgot password?</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <nav class="navbar-bradcrumb px-5">
     <div class="breadcrumb cursor-pointer">
       <div [routerLink]='["/"]'>
