--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,37 +15,6 @@
       </div>
     </div>
   </nav>
-  <div class="modal fade" id="modal-login" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-body">
-          <form class="px-4 py-3">
-            <div class="mb-3">
-              <label for="exampleDropdownFormEmail1" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
-            </div>
-            <div class="mb-3">
-              <label for="exampleDropdownFormPassword1" class="form-label">Password</label>
-              <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Password">
-            </div>
-            <div class="mb-3">
-              <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="dropdownCheck">
-                <label class="form-check-label" for="dropdownCheck">
-                  Remember me
-                </label>
-              </div>
-            </div>
-            <button type="submit" class="btn btn-primary">Sign in</button>
-          </form>
-          <div class="px-4 py-2">
-            <a class="dropdown-item" href="#">New around here? Sign up</a>
-            <a class="dropdown-item" href="#">Forgot password?</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
   <nav class="navbar-bradcrumb px-5">
     <div class="breadcrumb cursor-pointer">
       <div [routerLink]='["/"]'>
@@ -68,6 +37,8 @@
     </div>
   </nav>
 </header>
+<app-modal-login></app-modal-login>
+
 <section id="main-container">
   <router-outlet></router-outlet>
 </section>
