adding modal login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,20 @@
 
 <header>
   <nav class="navbar navbar-dark bg-dark px-5">
-    <span class="navbar-brand mb-0 h1 cursor-pointer" [routerLink]='["/"]'><h1>Saluda+</h1></span>
-    <div class="d-flex align-items-center">
+    <span class="navbar-brand mb-0 h1 cursor-pointer" [routerLink]='["/"]'><h1>Saluda+</h1>{{has_session}}</span>
+    <div class="d-flex align-items-center" *ngIf="has_session">
       <h3 class="text-white">Hola, Usuario!</h3>
       <span class="container-avatar-default-navbar ms-4 dropend" type="button" id="dropdown-navbar" data-bs-toggle="dropdown" aria-expanded="false">
         <img src="../assets/img/avatar-default.svg" />
       </span>
       <div class="dropdown">
         <ul class="dropdown-menu" aria-labelledby="dropdown-navbar">
-          <li><a class="dropdown-item" href="#modal-login" data-bs-toggle="modal" >Iniciar sesión</a></li>
-          <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
+          <li><a class="dropdown-item" (click)="logoutAction()">Cerrar sesión</a></li>
         </ul>
       </div>
     </div>
   </nav>
-  <nav class="navbar-bradcrumb px-5">
+  <nav class="navbar-bradcrumb px-5" *ngIf="has_session">
     <div class="breadcrumb cursor-pointer">
       <div [routerLink]='["/"]'>
         Inicio
@@ -37,7 +36,6 @@
     </div>
   </nav>
 </header>
-<app-modal-login></app-modal-login>
 
 <section id="main-container">
   <router-outlet></router-outlet>
