--- a/src/app/pages/policie/policie.component.scss
+++ b/src/app/pages/policie/policie.component.scss
@@ -17,6 +17,14 @@
         border: 1px solid black;
     }
 
+    .dot-yellow {
+        display: block;
+        background-color: rgb(218, 221, 13);
+        width: 30px;
+        height: 30px;
+        border-radius: 100%;
+        border: 1px solid black;
+    }
     .form-control {
         border: 2px solid black;
     }
