--- a/src/app/pages/policie/policie.component.html
+++ b/src/app/pages/policie/policie.component.html
@@ -2,9 +2,9 @@
   <div class="row w-100 m-0">
 
     <div class="w-100 d-flex justify-content-between align-items-center mb-4">
-      <h3>Póliza AA-012345678-0010</h3>
-      <div class="d-flex align-items-center">Activa
-        <span class="dot-green ms-2"></span>
+      <h3>Póliza {{policy?.folio}}</h3>
+      <div class="d-flex align-items-center">{{policy?.status}}
+        <span [ngClass]="getColorStatus(policy?.status)" class="ms-2"></span>
       </div>
     </div>
   </div>
@@ -12,7 +12,7 @@
   <div class="row w-100 m-0">
     <div class="w-100 mb-4 col-12">
       <span class="me-3 d-block mb-2">Beneficiario</span>
-      <input type="text" class="form-control" placeholder="Beneficiario">
+      <input type="text" disabled class="form-control" placeholder="Beneficiario" [ngModel]="policy?.user_name">
     </div>
   </div>
 
@@ -22,7 +22,10 @@
       <input type="text"
         placeholder="Datepicker"
         class="form-control"
-        bsDatepicker>
+        bsDatepicker
+        disabled
+        [ngModel]="policy?.created_at"
+      >
     </div>
 
     <div class="col-12 col-md-6 mb-4">
@@ -30,7 +33,10 @@
       <input type="text"
         placeholder="Datepicker"
         class="form-control"
-        bsDatepicker>
+        bsDatepicker
+        disabled
+        [ngModel]="policy?.expired_at"
+      >
     </div>
   </div>
   <h4 class="mb-4 px-2">Documentos Asociados</h4>
@@ -38,23 +44,12 @@
   <div class="w-100 row mb-4 m-0">
     <div class="col-12 col-md-6">
       <span class="me-3 d-block mb-2">Formato firmado</span>
-      <input class="form-control" type="file" id="formFileMultiple" multiple>
+      <a [href]="policy?.contract" target="_blank">{{policy?.contract}}</a>
     </div>
 
     <div class="col-12 col-md-6">
       <span class="me-3 d-block mb-2">Identificación</span>
-      <input class="form-control" type="file" id="formFileMultiple" multiple>
+      <a [href]="policy?.identification" target="_blank">{{policy?.identification}}</a>
     </div>
-  </div>
-
-  <div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-      Dropdown button
-    </button>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <li><a class="dropdown-item" href="#">Action</a></li>
-      <li><a class="dropdown-item" href="#">Another action</a></li>
-      <li><a class="dropdown-item" href="#">Something else here</a></li>
-    </ul>
   </div>
 </section>
