--- a/src/app/pages/courses/home-courses/home-courses.component.html
+++ b/src/app/pages/courses/home-courses/home-courses.component.html
@@ -1,66 +1,9 @@
 <section class="row container-home-courses">
-  <h2>Emprendimiento</h2>
-  <div class="col-3 mb-4">
-    <div class="card card-home-redirect" [routerLink]="['/cursos/negocio']">
+  <h2>Una categoria</h2>
+  <div class="col-6 mb-4" *ngFor="let course of courses">
+    <div class="card card-home-redirect" [routerLink]="[course.id]">
       <div class="card-body d-flex justify-content-center">
-        <h5 class="card-title mb-0">Negocio</h5>
-      </div>
-    </div>
-  </div>
-  
-  <div class="col-3 mb-4">
-    <div class="card card-home-redirect">
-      <div class="card-body d-flex justify-content-center">
-        <h5 class="card-title mb-0">Redes sociales</h5>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-3 mb-4">
-    <div class="card card-home-redirect">
-      <div class="card-body d-flex justify-content-center">
-        <h5 class="card-title mb-0">Ecommerce</h5>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-3 mb-4">
-    <div class="card card-home-redirect">
-      <div class="card-body d-flex justify-content-center">
-        <h5 class="card-title mb-0">Contratos</h5>
-      </div>
-    </div>
-  </div>
-  
-  <h2>Desarrollo personal</h2>
-  <div class="col-3 mb-4">
-    <div class="card card-home-redirect">
-      <div class="card-body d-flex justify-content-center">
-        <h5 class="card-title mb-0"></h5>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-3 mb-4">
-    <div class="card card-home-redirect">
-      <div class="card-body d-flex justify-content-center">
-        <h5 class="card-title mb-0"></h5>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-3 mb-4">
-    <div class="card card-home-redirect">
-      <div class="card-body d-flex justify-content-center">
-        <h5 class="card-title mb-0"></h5>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-3 mb-4">
-    <div class="card card-home-redirect">
-      <div class="card-body d-flex justify-content-center">
-        <h5 class="card-title mb-0"></h5>
+        <h5 class="card-title mb-0">{{course.name}}</h5>
       </div>
     </div>
   </div>
