--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -43,7 +43,7 @@
     </div>
 
     <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
-      <div class="card card-home-redirect">
+      <div class="card card-home-redirect" [routerLink]='["/configuracion"]'>
         <div class="card-body d-flex justify-content-center">
           <h5 class="card-title mb-0">Configurar</h5>
         </div>
