--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <div class="d-flex align-items-center" *ngIf="has_session">
       <h3 class="text-white">Hola, {{name_user}}!</h3>
       <span class="container-avatar-default-navbar ms-4 dropend" type="button" id="dropdown-navbar" data-bs-toggle="dropdown" aria-expanded="false">
-        <img src="../assets/img/avatar-default.svg" />
+        <img [src]="avatar_user" />
       </span>
       <div class="dropdown">
         <ul class="dropdown-menu" aria-labelledby="dropdown-navbar">
