--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,8 +16,10 @@
     align-items: center;
     cursor: pointer;
     img {
-        width: 40px;
-        height: 40px;
+        width: 45px;
+        height: 45px;
+        border-radius: 100%;
+        object-fit: cover;
     }
 }
 .navbar-bradcrumb {
