recover password services, validations in forms, suscriptions in login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,53 +1,8 @@
 
 <header>
-  <nav class="navbar navbar-dark bg-dark px-5">
-    <span class="navbar-brand mb-0 h1 cursor-pointer" [routerLink]='["/home"]'><h1>Saluda+</h1></span>
-    <div class="d-flex align-items-center" *ngIf="has_session">
-      <h3 class="text-white">Hola, {{name_user}}!</h3>
-      <span class="container-avatar-default-navbar ms-4 dropend" type="button" id="dropdown-navbar" data-bs-toggle="dropdown" aria-expanded="false">
-        <img [src]="avatar_user" />
-      </span>
-      <div class="dropdown">
-        <ul class="dropdown-menu" aria-labelledby="dropdown-navbar">
-          <li class="cursor-pointer"><a class="dropdown-item" (click)="logoutAction()">Cerrar sesión</a></li>
-          <li class="cursor-pointer"><a class="dropdown-item" [routerLink]='["/configuracion"]'>Configuración</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <nav class="navbar-bradcrumb px-5" *ngIf="has_session">
-    <nav aria-label="breadcrumb">
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a [routerLink]='["/home"]'>Home</a></li>
-        <li class="breadcrumb-item" *ngIf="route_url.includes('/cursos')"><a [routerLink]='["/cursos"]'>Cursos</a></li>
-        <li class="breadcrumb-item" *ngIf="route_url.includes('/configuracion')"><a [routerLink]='["/configuracion"]'>Configuración</a></li>
-        <li class="breadcrumb-item" *ngIf="route_url === '/mi-poliza'"><a [routerLink]='["/mi-poliza"]'>Mi póliza</a></li>
-      </ol>
-    </nav>
-    <div>
-      <span *ngIf="route_url === '/'; else elseBlock" >Consola de usuario</span>
-      <ng-template #elseBlock>
-        <div class="close-icon-return"  [routerLink]='["/home"]'>
-          x
-        </div>
-      </ng-template>
-    </div>
-  </nav>
+  <app-navbar *ngIf="has_session"></app-navbar>
 </header>
 
 <section id="main-container">
   <router-outlet></router-outlet>
 </section>
-
-<footer class="bg-dark text-white py-4">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12 text-center">
-        <a href="#" class="text-white mx-3">link</a>
-        <a href="#" class="text-white mx-3">link</a>
-        <a href="#" class="text-white mx-3">link</a>
-        <a href="#" class="text-white mx-3">link</a>
-      </div>
-    </div>
-  </div>
-</footer>
