--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,6 +1,6 @@
 <ng-template #modalLogin>
   <div class="modal-body">
-    <form class="px-4 py-3" (ngSubmit)="loginAction()" [formGroup]="form_login">
+    <form class="px-4 py-3" (ngSubmit)="loginAction()" [formGroup]="form_login" *ngIf="!forgot_password_view">
       <div class="mb-3">
         <label for="exampleDropdownFormEmail1" class="form-label">Email address</label>
         <input formControlName="email" type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
@@ -9,16 +9,30 @@
         <label for="exampleDropdownFormPassword1" class="form-label">Password</label>
         <input formControlName="password" type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Password">
       </div>
-      <div class="mb-3">
-        <div class="form-check">
-          <input type="checkbox" class="form-check-input" id="dropdownCheck" disabled>
-          <label class="form-check-label" for="dropdownCheck">
-            Remember me
-          </label>
-        </div>
+      <div>
+
+        <button type="submit" class="btn btn-primary" [disabled]="form_login.invalid">Sign in</button>
       </div>
-      <button type="submit" class="btn btn-primary">Sign in</button>
+      <a class="d-block mt-3 cursor-pointer" (click)="forgot_password_view = true">¿Olvidaste la contraseña?</a>
     </form>
-  
+    
+    <form class="px-4 py-3" (ngSubmit)="forgotPasswordAction()" [formGroup]="form_login" *ngIf="forgot_password_view && !password_recover_view">
+      <div class="mb-3">
+        <h4>Recupera tu cuenta</h4>
+        <p>	Ingresa tu correo electrónico y te enviaremos un enlace para restablecer tu contraseña.</p>
+        <label for="exampleDropdownFormEmail1" class="form-label">Email address</label>
+        <input formControlName="email" type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
+      </div>
+
+      <button type="submit" class="btn btn-primary" [disabled]="form_login.invalid">Enviar link de recuperación</button>
+      
+      <a class="mt-3 d-block cursor-pointer" (click)="forgot_password_view = false">< Regresar</a>
+    </form>
+
+    <div *ngIf="password_recover_view">
+      <h4>Recupera tu cuenta</h4>
+      <p>Se ha enviado un email a la cuenta <strong>{{form_login.value.email}}</strong>, con el link para recuperar tu cuenta.</p>
+      <a class="mt-3 d-block cursor-pointer" (click)="forgot_password_view = false; password_recover_view = false;">< Regresar</a>
+    </div>
   </div>
 </ng-template>
