--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -30,7 +30,7 @@
     </div>
 
     <div class="d-flex justify-content-end">
-      <button type="submit" class="btn btn-success mt-3">Success</button>
+      <button type="submit" class="btn btn-success mt-3" [disabled]="form_settings.invalid">Success</button>
     </div>
 
   </form>
