--- a/src/app/pages/courses/courses.component.scss
+++ b/src/app/pages/courses/courses.component.scss
@@ -1,8 +1,7 @@
 .section-home {
     max-width: 1400px;
-    // max-width: 1f400px;
 }
 .section-gray-coursers {
-    background-color: #ddd !important;
+    background-color: #F7F7F7;
     border-radius: 1em;
 } 
