--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
-<section class="">
+<section class="d-flex justify-content-center w-100">
 
-  <div class="mt-5 section-home row m-0">
+  <div class="mt-5 section-home row m-0 w-100">
 
     <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
       <div class="card card-home-redirect" [routerLink]='["/mi-poliza"]'>
