--- a/src/app/pages/settings/settings.component.scss
+++ b/src/app/pages/settings/settings.component.scss
@@ -30,7 +30,7 @@
   }
 }
 .section-gray-coursers {
-  background-color: #ddd !important;
+  background-color: #F7F7F7;
   border-radius: 1em;
 } 
 .toast-setting {
