--- a/src/app/pages/policie/policie.component.html
+++ b/src/app/pages/policie/policie.component.html
@@ -1,7 +1,6 @@
 <section class="policie-detail">
-  <div class="row w-100 m-0">
-
-    <div class="w-100 d-flex justify-content-between align-items-center mb-4">
+  <div class="row w-100 m-0 policy-name-container">
+    <div class="w-100 d-flex justify-content-between align-items-center">
       <h3>Póliza {{policy?.folio}}</h3>
       <div class="d-flex align-items-center">{{policy?.status}}
         <span [ngClass]="getColorStatus(policy?.status)" class="ms-2"></span>
@@ -9,49 +8,52 @@
     </div>
   </div>
 
-  <div class="row w-100 m-0">
-    <div class="w-100 mb-4 col-12">
-      <span class="me-3 d-block mb-2">Beneficiario</span>
-      <input type="text" disabled class="form-control" placeholder="Beneficiario" [ngModel]="policy?.user_name">
-    </div>
-  </div>
+  <div class="container-form">
 
-  <div class="w-100 row mb-4 m-0">
-    <div class="col-12 col-md-6 mb-4">
-      <span class="me-3 d-block mb-2">Fecha de inicio</span>
-      <input type="text"
-        placeholder="Datepicker"
-        class="form-control"
-        bsDatepicker
-        disabled
-        [ngModel]="policy?.created_at"
-      >
+    <div class="row w-100 m-0">
+      <div class="w-100 mb-4 col-12">
+        <span class="me-3 d-block mb-2">Beneficiario</span>
+        <input type="text" disabled class="form-control" placeholder="Beneficiario" [ngModel]="policy?.user_name">
+      </div>
     </div>
-
-    <div class="col-12 col-md-6 mb-4">
-      <span class="me-3 d-block mb-2">Fecha de vencimiento</span>
-      <input type="text"
-        placeholder="Datepicker"
-        class="form-control"
-        bsDatepicker
-        disabled
-        [ngModel]="policy?.expired_at"
-      >
+  
+    <div class="w-100 row mb-4 m-0">
+      <div class="col-12 col-md-6 mb-4">
+        <span class="me-3 d-block mb-2">Fecha de inicio</span>
+        <input type="text"
+          placeholder="Datepicker"
+          class="form-control"
+          bsDatepicker
+          disabled
+          [ngModel]="policy?.created_at"
+        >
+      </div>
+  
+      <div class="col-12 col-md-6 mb-4">
+        <span class="me-3 d-block mb-2">Fecha de vencimiento</span>
+        <input type="text"
+          placeholder="Datepicker"
+          class="form-control"
+          bsDatepicker
+          disabled
+          [ngModel]="policy?.expired_at"
+        >
+      </div>
     </div>
-  </div>
-  <h4 class="mb-4 px-2">Documentos Asociados</h4>
-
-  <div class="w-100 row mb-4 m-0">
-    <div class="col-12 col-md-6">
-      <span class="me-3 d-block mb-4">Formato firmado</span>
-      <a [href]="policy?.contract" target="_blank" *ngIf="policy?.contract;else else_contract">{{policy?.contract}}</a>
-      <ng-template #else_contract>No se ha subido ningún formato firmado</ng-template>
-    </div>
-
-    <div class="col-12 col-md-6">
-      <span class="me-3 d-block mb-4">Identificación</span>
-      <a [href]="policy?.identification" target="_blank" *ngIf="policy?.identification;else else_identification">{{policy?.identification}}</a>
-      <ng-template #else_identification>No se ha subido ninguna identificación</ng-template>
+    <h4 class="mb-4 px-2">Documentos Asociados</h4>
+  
+    <div class="w-100 row mb-4 m-0">
+      <div class="col-12 col-md-6">
+        <span class="me-3 d-block mb-4">Formato firmado</span>
+        <a [href]="policy?.contract" target="_blank" *ngIf="policy?.contract;else else_contract">{{policy?.contract}}</a>
+        <ng-template #else_contract>No se ha subido ningún formato firmado</ng-template>
+      </div>
+  
+      <div class="col-12 col-md-6">
+        <span class="me-3 d-block mb-4">Identificación</span>
+        <a [href]="policy?.identification" target="_blank" *ngIf="policy?.identification;else else_identification">{{policy?.identification}}</a>
+        <ng-template #else_identification>No se ha subido ninguna identificación</ng-template>
+      </div>
     </div>
   </div>
 </section>
