--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,7 +1,9 @@
-<nav class="navbar navbar-dark bg-dark px-5">
-  <span class="navbar-brand mb-0 h1 cursor-pointer" [routerLink]='["/home"]'><h1>Saluda+</h1></span>
-  <div class="d-flex align-items-center" *ngIf="has_session">
-    <h3 class="text-white">Hola, {{name_user}}!</h3>
+<nav class="navbar px-5">
+  <span class="navbar-brand mb-0 cursor-pointer" [routerLink]='["/home"]'>
+    <img src="../../../../assets/img/logo/RI.png" alt="realinver-realidades-de-inversion">
+  </span>
+  <div class="d-flex align-items-center color-blue" *ngIf="has_session">
+    <h3 class="m-0">HOLA, {{name_user}}!</h3>
     <span class="container-avatar-default-navbar ms-4 dropend" type="button" id="dropdown-navbar" data-bs-toggle="dropdown" aria-expanded="false">
       <img [src]="avatar_user" />
     </span>
