--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,50 +2,10 @@
 
   <div class="mt-5 section-home row m-0 w-100">
 
-    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
-      <div class="card card-home-redirect" [routerLink]='["/mi-poliza"]'>
+    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4" *ngFor="let item of main_routes">
+      <div class="card card-home-redirect" [routerLink]='[item.route]'>
         <div class="card-body d-flex justify-content-center">
-          <h5 class="card-title mb-0">Mi póliza</h5>
-        </div>
-      </div>
-    </div>
-    
-    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
-      <div class="card card-home-redirect" [routerLink]="['/cursos']">
-        <div class="card-body d-flex justify-content-center">
-          <h5 class="card-title mb-0">Cursos</h5>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
-      <div class="card card-home-redirect">
-        <div class="card-body d-flex justify-content-center">
-          <h5 class="card-title mb-0">Convenios</h5>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
-      <div class="card card-home-redirect">
-        <div class="card-body d-flex justify-content-center">
-          <h5 class="card-title mb-0">Descuentos</h5>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
-      <div class="card card-home-redirect">
-        <div class="card-body d-flex justify-content-center">
-          <h5 class="card-title mb-0">FAQ's</h5>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
-      <div class="card card-home-redirect" [routerLink]='["/configuracion"]'>
-        <div class="card-body d-flex justify-content-center">
-          <h5 class="card-title mb-0">Configurar</h5>
+          <h5 class="card-title mb-0">{{item.name}}</h5>
         </div>
       </div>
     </div>
