styles and assets

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,19 +1,24 @@
-<ng-template #modalLogin>
-  <div class="modal-body">
+<ng-template #modalLogin >
+  <div class="custom-modal modal-body">
+    <div class="modal-header">
+      <h4 class="modal-title text-center w-100">Inicio de sesión</h4>
+    </div>
     <form class="px-4 py-3" (ngSubmit)="loginAction()" [formGroup]="form_login" *ngIf="!forgot_password_view">
       <div class="mb-3">
-        <label for="exampleDropdownFormEmail1" class="form-label">Email address</label>
+        <label for="exampleDropdownFormEmail1" class="form-label">Nombre de usuario</label>
         <input formControlName="email" type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
       </div>
       <div class="mb-3">
-        <label for="exampleDropdownFormPassword1" class="form-label">Password</label>
+        <label for="exampleDropdownFormPassword1" class="form-label">Contraseña</label>
         <input formControlName="password" type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Password">
       </div>
-      <div>
+      <div class="d-flex justify-content-center flex-wrap">
+        <button type="submit" class="btn btn-primary btn-rounded" [disabled]="form_login.invalid">Iniciar Sesión</button>
+        <strong class="w-100 text-center">
 
-        <button type="submit" class="btn btn-primary" [disabled]="form_login.invalid">Sign in</button>
+          <a class="d-block mt-3 cursor-pointer forgot-password" (click)="forgot_password_view = true">¿Olvidaste la contraseña?</a>
+        </strong>
       </div>
-      <a class="d-block mt-3 cursor-pointer" (click)="forgot_password_view = true">¿Olvidaste la contraseña?</a>
     </form>
     
     <form class="px-4 py-3" (ngSubmit)="forgotPasswordAction()" [formGroup]="form_login" *ngIf="forgot_password_view && !password_recover_view">
@@ -23,10 +28,13 @@
         <label for="exampleDropdownFormEmail1" class="form-label">Email address</label>
         <input formControlName="email" type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
       </div>
-
-      <button type="submit" class="btn btn-primary" [disabled]="form_login.invalid">Enviar link de recuperación</button>
+      <div class="d-flex justify-content-center flex-wrap">
+        <button type="submit" class="btn btn-primary btn-rounded" [disabled]="form_login.invalid">Enviar link de recuperación</button>
+        <strong class="w-100 text-center">
+          <a class="mt-3 d-block cursor-pointer forgot-password" (click)="forgot_password_view = false">< Regresar</a>
+        </strong>
+      </div>
       
-      <a class="mt-3 d-block cursor-pointer" (click)="forgot_password_view = false">< Regresar</a>
     </form>
 
     <div *ngIf="password_recover_view">
