--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 #main-container {
     width: 100%;
     height: 100%;
-    background: url('../assets/img/backgrounds/main_background.png');
+    background: url('./../assets/img/backgrounds/main_background.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
