--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,14 +1,22 @@
-<section class="d-flex justify-content-center w-100">
-
-  <div class="mt-5 section-home row m-0 w-100">
-
-    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4" *ngFor="let item of main_routes">
-      <div class="card card-home-redirect" [routerLink]='[item.route]'>
-        <div class="card-body d-flex justify-content-center">
-          <h5 class="card-title mb-0">{{item.name}}</h5>
+<section class="landing">
+  <div class="row m-0">
+    <div class="col-lg-8 offset-2">
+      <div class="mt-3 section-home row">
+        <div
+          class="col-12 col-sm-6 col-md-6 col-lg-6 menu-item-container"
+          *ngFor="let item of main_routes"
+        >
+          <div class="menu-item" [routerLink]="item.route">
+            <div class="menu-icon">
+              <img src="/assets/img/icons/{{ item.icon }}" alt="" />
+            </div>
+            <div class="menu-text">
+              <div class="border-circle"></div>
+              {{ item.name }}
+            </div>
+          </div>
         </div>
       </div>
     </div>
-
   </div>
 </section>
