--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,15 +1,51 @@
 .section-home {
-    max-width: 1400px;
-
-    .card-home-redirect {
-        cursor: pointer;
-        border: 2px solid black;
-        min-height: 226px;
-        display: flex;
-        flex-direction: row;
-        align-items: end;
-        h5 {
-
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    .menu-item-container{
+        &:nth-child( even ) {
+            align-self: flex-end;   
+        }
+        .menu-item {
+            width: 100%;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            cursor: pointer;
+            .menu-icon{
+                height: 90px;
+                width: 90px;
+                border-radius: 50%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: navy;
+                img{
+                    height: 50px;
+                    width: auto;
+                }
+            }
+            .menu-text{
+                position: relative;
+                width: calc(100% - 85px);
+                background-color: #b1c4fd;
+                color:#1f2b5b;
+                font-size: 20px;
+                font-weight: bold;
+                text-transform: uppercase;
+                padding: 15px 35px;
+                border-radius: 0 15px 15px 0;
+                .border-circle{
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                    width: 20px;
+                    background: #d5e0fe;
+                    height: 100%;
+                    border-radius: 0 50% 50% 0;
+                }
+            }
         }
     }
+    
 }
