--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <app-navbar *ngIf="has_session"></app-navbar>
   </header>
   
-  <section>
+  <section class="p-2">
     <router-outlet></router-outlet>
   </section>
 </section>
