--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,11 @@
 <section class="landing">
   <div class="row m-0">
-    <div class="col-lg-8 offset-2">
+    <div class="col-lg-8 mx-auto">
       <div class="mt-3 section-home row">
         <div
-          class="col-12 col-sm-6 col-md-6 col-lg-6 menu-item-container"
+          class="col-12 col-sm-6 col-md-6 col-lg-6 menu-item-container mb-2 mb-sm-0"
           *ngFor="let item of main_routes"
+          [ngClass]="{'d-none': item.hide}"
         >
           <div class="menu-item" [routerLink]="item.route">
             <div class="menu-icon">
