--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -1,13 +1,13 @@
 <section class="d-flex justify-content-center">
   <form class="mt-5 section-home section-gray-coursers p-5 w-100"  (ngSubmit)="OnSubmit()" [formGroup]="form_settings">
-    <div class="d-flex w-100 align-items-center">
-      <div class="w-auto">
+    <div class="d-sm-flex w-100 align-items-center">
+      <div class="w-auto mb-2 mb-sm-0 d-flex d-sm-block justify-content-center">
         <div class="main-avatar-user-container" (click)="addAvatar()">
           <img [src]="user?.avatar" alt="" [ngClass]="getUserClassAvatar()">
         </div>
       </div>
       <input type="file" class="d-none" id="input-file-avatar-settings" (change)="onFileSelected($event)" formControlName="avatar">
-      <div class="ms-4 d-flex flex-column w-100">
+      <div class="ms-sm-4 d-flex flex-column w-100">
         <span class="me-3 d-block mb-2">Apellido Paterno</span>
         <input type="text" class="form-control" placeholder="Apellido Paterno" [ngModel]="user?.last_name" formControlName="last_name">
 
@@ -17,22 +17,21 @@
         </div>
       </div>
     </div>
-    <div class="d-flex justify-content-between">
-      <div class="w-100">
+    <div class="row">
+      <div class="col-12 col-md-6">
         <span class="me-3 d-block mt-4">Nombre(s)</span>
         <input type="text" class="form-control" placeholder="Nombres" [ngModel]="user?.names" formControlName="names">
       </div>
 
-      <div class="w-100 ms-4">
+      <div class="col-12 col-md-6">
         <span class="me-3 d-block mt-4">Correo Electrónico</span>
         <input type="text" class="form-control" placeholder="Correo Electrónico" [ngModel]="user?.email" formControlName="email">
       </div>
     </div>
 
     <div class="d-flex justify-content-end">
-      <button type="submit" class="btn btn-success mt-3" [disabled]="form_settings.invalid">Success</button>
+      <button type="submit" class="btn btn-success mt-3" [disabled]="form_settings.invalid">Guardar</button>
     </div>
-
   </form>
 </section>
 
