--- a/src/app/pages/settings/settings.component.scss
+++ b/src/app/pages/settings/settings.component.scss
@@ -3,6 +3,7 @@
   
   .main-avatar-user-container {
     height: 250px;
+    flex-shrink: 0;
     width: 250px;
     background-color: white;
     border-radius: 100%;
@@ -26,6 +27,10 @@
       border-radius: 100%;
       overflow: hidden;
       object-fit: cover;
+    }
+    @media(max-width: 400px) {
+      height: 150px;
+      width: 150px;
     }
   }
 }
