--- a/src/app/pages/courses/detail-course/detail-course.component.html
+++ b/src/app/pages/courses/detail-course/detail-course.component.html
@@ -1,21 +1,22 @@
 <section>
-    <div class="d-flex mb-3">
+    <div class="d-md-flex justify-content-between mb-3 w-100">
       <div>
-        <h2>{{course?.name}}</h2> <p>Impartido por Juan Carlos Najera Hernandez</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At corporis ad ut voluptate porro nostrum totam, sunt iure distinctio possimus alias ipsa sequi! Iure, accusamus eos! Suscipit itaque dolorem vero! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis doloribus rem, commodi eligendi, hic ratione nulla at quisquam iure placeat beatae dolore reprehenderit enim porro laudantium, voluptatum quia nesciunt vitae.</p>
-  
+        <h2 class="">{{course?.name}}</h2> <p *ngIf="course?.teacher">Impartido por {{course?.teacher}}</p>
+        <p *ngIf="course?.description">{{course?.description}}</p>
       </div>
-      <div class="image-creator">
-        <img src="../../../../assets/img/avatar-default.svg" alt="">
+      <div>
+        <div class="image-creator-container mx-auto ms-md-3">
+          <img [src]="course?.teacher_avatar ? course?.teacher_avatar : '../assets/img/logo/avatar-default.png'" alt="image-structor">
+        </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row" *ngIf="course?.classes.length > 0">
       <h2 class="w-100">Lecciones</h2>
   
-      <div class="col" *ngFor="let lesson of [].constructor(course?.total_classes)">
+      <div class="col mb-3" *ngFor="let lesson of course?.classes" (click)="openLesson(lesson.url)">
         <div class="card-leccions-redirect">
-          <div class="card-body d-flex justify-content-center">
-            <h5 >Leccion 1</h5>
+          <div class="card-body d-flex justify-content-center p-2">
+            <p class="title-lection">{{lesson.title}}</p>
           </div>
         </div>
       </div>
