--- a/src/app/pages/courses/detail-course/detail-course.component.scss
+++ b/src/app/pages/courses/detail-course/detail-course.component.scss
@@ -1,17 +1,19 @@
-.image-creator {
+.image-creator-container {
     background-color: white;
     border: 2px solid black;
-    width: 200px;
-    height: 200px;
-
+    width: 200px !important;
+    height: 200px !important;
+    overflow: hidden;
+    margin-left: 1em;
+    flex-shrink: 0;
     img {
         width: 200px;
         height: 200px;
+        object-fit: cover;
     }
 }
 .card-leccions-redirect {
     cursor: pointer;
-
     border: 2px solid black;
     min-height: 150px;
     width: 150px;
@@ -20,4 +22,9 @@
     flex-direction: row;
     align-items: end;
     border-radius: 1em;
+    
+    .title-lection {
+        text-align: center;
+        font-size: 14px;
+    }
 }
