--- a/src/app/pages/courses/home-courses/home-courses.component.html
+++ b/src/app/pages/courses/home-courses/home-courses.component.html
@@ -1,9 +1,11 @@
-<section class="row container-home-courses">
-  <h2>Una categoria</h2>
-  <div class="col-6 mb-4" *ngFor="let course of courses">
-    <div class="card card-home-redirect" [routerLink]="[course.id]">
-      <div class="card-body d-flex justify-content-center">
-        <h5 class="card-title mb-0">{{course.name}}</h5>
+<section>
+  <div *ngFor="let category of categories" class="row container-home-courses">
+    <h2>{{category.category}}</h2>
+    <div class="col-6 mb-4" *ngFor="let course of category.courses">
+      <div class="card card-home-redirect" [routerLink]="[course.id]">
+        <div class="card-body d-flex justify-content-center">
+          <h5 class="card-title mb-0">{{course.name}}</h5>
+        </div>
       </div>
     </div>
   </div>
