--- a/src/app/pages/courses/courses.component.html
+++ b/src/app/pages/courses/courses.component.html
@@ -1,5 +1,5 @@
 <section class="d-flex justify-content-center">
-  <div class="mt-5 section-home section-gray-coursers p-5">
+  <div class="mt-3 section-home section-gray-coursers w-100">
     <router-outlet></router-outlet>
   </div>
 </section>
