--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <img src="../../../../assets/img/logo/RI.png" alt="realinver-realidades-de-inversion">
   </span>
   <div class="d-flex align-items-center color-blue" *ngIf="has_session">
-    <h3 class="m-0 d-none d-sm-block">HOLA, {{name_user.substring(0, 10)}} {{name_user.length > 10 ? '... ' : ''}}!</h3>
+    <h3 class="m-0 d-none d-sm-block">¡HOLA, {{name_user.substring(0, 10)}}{{name_user.length > 10 ? '...' : ''}}!</h3>
     
     <span class="container-avatar-default-navbar ms-4 dropend" type="button" id="dropdown-navbar" data-bs-toggle="dropdown" aria-expanded="false">
       <img [src]="avatar_user" />
