--- a/src/app/pages/benefits/benefits.component.scss
+++ b/src/app/pages/benefits/benefits.component.scss
@@ -1,14 +1,31 @@
 .main-container-benefits {
+    max-width: 1400px;
     margin-top: 3em;
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
 
     iframe {
-
         max-width: 1400px;
         height: 700px;
         border-radius: 0.7em;
+    }
+    .main-image {
+        cursor: pointer;
+    }
+    .icon-benefits {
+        cursor: pointer;
+        position: absolute;
+        top: 45%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    .info-relevant-card {
+        cursor: pointer;        
+        position: absolute;
+        width: 280px;
+        top: 75%;
+        left: 50%;
+        text-align: center;
+        transform: translate(-50%, -50%);
     }
 }
