--- a/src/app/pages/courses/detail-course/detail-course.component.html
+++ b/src/app/pages/courses/detail-course/detail-course.component.html
@@ -1,24 +1,31 @@
 <section>
-    <div class="d-md-flex justify-content-between mb-3 w-100">
-      <div>
-        <h2 class="">{{course?.name}}</h2> <p *ngIf="course?.teacher">Impartido por {{course?.teacher}}</p>
-        <p *ngIf="course?.description">{{course?.description}}</p>
+  <div class="row w-100 m-0 policy-name-container">
+    <div class="w-100 d-flex justify-content-between align-items-center">
+      <h3>{{course?.name}}</h3>
+    </div>
+  </div>
+  <div class="d-md-flex justify-content-between mb-3 w-100 p-5 pb-0">
+    <div>
+      <p *ngIf="course?.teacher">Impartido por {{course?.teacher}}</p>
+      <p *ngIf="course?.description">{{course?.description}}</p>
+    </div>
+    <div>
+      <div class="image-creator-container mx-auto ms-md-3">
+        <img [src]="course?.teacher_avatar ? course?.teacher_avatar : '../assets/img/logo/avatar-default.png'" alt="image-structor">
       </div>
-      <div>
-        <div class="image-creator-container mx-auto ms-md-3">
-          <img [src]="course?.teacher_avatar ? course?.teacher_avatar : '../assets/img/logo/avatar-default.png'" alt="image-structor">
+    </div>
+  </div>
+  <div class="row p-5" *ngIf="course?.classes.length > 0">
+    <h2 class="w-100 mb-3">Lecciones</h2>
+
+    <div class="col-3 mb-3" *ngFor="let lesson of course?.classes">
+      <div class="position-relative d-flex justify-content-center">
+        <img src="./../../../../assets/img/backgrounds/imagenleccion1.png" class="cursor-pointer" (click)="openLesson(lesson.url)">
+        <img src="./../../../../assets/img/icons/iconoLECCION.png" class="cursor-pointer img-icon" (click)="openLesson(lesson.url)">
+        <div class="title-lection" (click)="openLesson(lesson.url)">
+          <p>{{lesson.title.substring(0, 30)}}</p>
         </div>
       </div>
     </div>
-    <div class="row" *ngIf="course?.classes.length > 0">
-      <h2 class="w-100">Lecciones</h2>
-  
-      <div class="col mb-3" *ngFor="let lesson of course?.classes" (click)="openLesson(lesson.url)">
-        <div class="card-leccions-redirect">
-          <div class="card-body d-flex justify-content-center p-2">
-            <p class="title-lection">{{lesson.title}}</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+  </div>
+</section>
