change fav icon, add text in faqs, fix service benefits, show toast error in benefits

--- a/src/app/pages/benefits/benefits.component.html
+++ b/src/app/pages/benefits/benefits.component.html
@@ -23,4 +23,16 @@
       </div>
     </div>
   </ng-template>
+
+  <div class="toast-container position-absolute toast-error">
+    <div class="toast" id="toast-error">
+      <div class="toast-header">
+        <strong class="me-auto">Ups, Hubo un error</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+      </div>
+      <div class="toast-body bg-white">
+        Parece que no se pueden cargar tus beneficios en este momento, intentalo más tarde.
+      </div>
+    </div>
+  </div>
 </section>
